--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 <body>
     <h1 class="font-effect-neon"; style="color: orange;">Tic Tac Toe Table</h1>
     <h2 class="font-effect-neon"; style="color: #FF10F0;">Who will lose?</h2>
+    <!-- I went ahead and allowed styling within my html for h1 as it seemed more organized there -->
 
     <div class="table" id="gameBoard"> 
         <!-- here in these 9 divs I am denotating them as data-cell so that it will be easy to reference in js -->
