--- a/index.html
+++ b/index.html
@@ -4,25 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3x3 Grid</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia&effect=neon|outline|emboss|shadow-multiple">
-
+    <script src="index.js"></script>
     <style>
-        body {
-            margin: 60px;
-        }
-        h1 {
-            font-size: 80px;
-            font-family: "sofia", sans-serif;
-            text-align: center;
-        }
-        h2 {
-            text-align:center;
-        }
-        .table div {
-            padding: 40px;
-            background-color: #FF10F0;
-        }
+        body{
+    font-family: "Sofia" , sans-serif;
+    font-size: 25px;
+}
     </style>
 </head>
 <body>
@@ -30,19 +18,21 @@
     <h2 class="font-effect-neon"; style="color: #FF10F0;">Who will lose?</h2>
     <!-- I went ahead and allowed styling within my html for h1 as it seemed more organized there -->
 
-    <div class="table" id="gameBoard"> 
-        <!-- here in these 9 divs I am denotating them as data-cell so that it will be easy to reference in js -->
-        <div class="cell" data-cell></div>
-        <div class="cell" data-cell></div>
-        <div class="cell" data-cell></div>
-        <div class="cell" data-cell></div>
-        <div class="cell" data-cell></div>
-        <div class="cell" data-cell></div>
-        <div class="cell" data-cell></div>
-        <div class="cell" data-cell></div>
-        <div class="cell" data-cell></div>
+    <div class="table" id="table"> 
+        <div class="cell" data-cell>1</div>
+        <div class="cell" data-cell>2</div>
+        <div class="cell" data-cell>3</div>
+        <div class="cell" data-cell>4</div>
+        <div class="cell" data-cell>5</div>
+        <div class="cell" data-cell>6</div>
+        <div class="cell" data-cell>7</div>
+        <div class="cell" data-cell>8</div>
+        <div class="cell" data-cell>9</div>
+<!-- here in these 9 divs I am denotating them as data-cell so that it will be easy to reference in js -->
     </div>
-    
-
+    <div class="winningAlert">
+        <div data-winningAlert></div>
+        <button id="startOverButton">Restart</button>
+    </div>
 </body>
 </html>
