--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <h2 class="font-effect-neon"; style="color: #FF10F0;">Who will lose?</h2>
     <!-- I went ahead and allowed styling within my html for h1 as it seemed more organized there -->
 
-    <div class="table"> 
+    <div class="board"> 
         <!-- essientially "data-index " is an attribute i will be using to indentify each area -->
         <!-- when adding the border to class I individually , it helped with seeing the outline of the table -->
         <div data-cell-index="1" class="cell">x</div>
@@ -39,5 +39,6 @@
         <button class="startOverButton">Restart</button>
     </section>
     </div>
+    <script src="index.js"></script>
 </body>
 </html>
